# wopan-open

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: _tests.yml  ci.yml  release.yml
src/openwopan/: __init__.py  __main__.py
src/openwopan/app/: bootstrap.py  controller.py  file_browser.py  logging_config.py  main.py
src/openwopan/auth/: __init__.py  session.py  web_login.py
src/openwopan/storage/: __init__.py  credentials.py  settings.py
src/openwopan/tasks/: __init__.py  download.py
src/openwopan/ui/: __init__.py  login_window.py  main_window.py
src/openwopan/wopan/: __init__.py  client.py  errors.py  models.py
tests/: conftest.py  test_app_controller.py  test_app_main.py  test_auth_web_login.py  test_credentials.py  test_download_tasks.py  test_file_browser.py  test_logging_config.py  test_login_window.py  test_main_window.py  test_models.py  test_phase0_boundaries.py  test_wopan_file_operations.py  test_wopan_list_files.py  test_wopan_live_transfer_capabilities.py  test_wopan_validate_session.py
